--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "todolist-server",
+  "name": "@todolist/backend",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend API for the Todolist App",
+  "main": "./dist/server.js",
   "scripts": {
-    "start": "nodemon ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@todolist/config": "workspace:*",
+    "@todolist/types": "workspace:*",
     "@types/cookie-parser": "^1.4.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -22,7 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -31,7 +36,8 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
-    "ts-node-dev": "^2.0.0",
+    "@types/node": "^20.0.0",
+    "tsx": "^4.16.0",
     "typescript": "^5.0.4"
   }
 }
