Improved the overall reliability of the backend with better error handling, and added health check endpoints. Added better validation and added logging with pino.

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,8 +7,13 @@
     "outDir": "./dist",
     "noEmit": false,
     "jsx": "preserve",
-    "types": ["node"]
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "ts-node": {
+    "files": true,
+    "experimentalSpecifierResolution": "node"
+  }
 }
