--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,39 +5,46 @@
   "description": "Backend API for the Todolist App",
   "main": "./dist/server.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "dev": "npx tsx watch src/server.ts",
+    "build": "npx tsc",
     "start": "node dist/server.js",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "npx tsc --noEmit",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix"
   },
   "dependencies": {
     "@todolist/config": "workspace:*",
     "@todolist/types": "workspace:*",
-    "@types/cookie-parser": "^1.4.3",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "@types/cookie-parser": "^1.4.9",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^17.2.2",
+    "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.0.1",
-    "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.5",
-    "morgan": "^1.10.0",
-    "zod": "^3.22.0"
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.7",
+    "morgan": "^1.10.1",
+    "pino": "^9.9.5",
+    "pino-http": "^10.5.0",
+    "pino-pretty": "^13.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^20.0.0",
-    "tsx": "^4.16.0",
-    "typescript": "^5.0.4"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.3.1",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.9.2"
   }
 }
