--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,10 +7,10 @@
     "outDir": "./dist",
     "noEmit": false,
     "jsx": "preserve",
-    "types": ["node"],
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "types": ["node", "jest"],
+    "typeRoots": ["./node_modules/@types", "./src/types", "./tests"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["dist", "node_modules"],
   "ts-node": {
     "files": true,
