--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -14,8 +14,8 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY packages/ ./packages/
 COPY apps/frontend/package.json ./apps/frontend/
 
-# Install dependencies
-RUN pnpm install --frozen-lockfile
+# Install dependencies (skip prepare script to avoid husky issues)
+RUN pnpm install --frozen-lockfile --ignore-scripts
 
 # Copy source code
 COPY . .
@@ -37,15 +37,13 @@ COPY apps/frontend/nginx.conf /etc/nginx/conf.d/default.conf
 # Copy built frontend from build stage
 COPY --from=frontend-build /app/apps/frontend/dist /usr/share/nginx/html
 
-# Create non-root user
-RUN addgroup -g 1001 -S nginx && \
-    adduser -S nginx -u 1001 -G nginx
-
-# Set proper permissions
+# Set proper permissions (nginx user already exists in nginx:alpine)
 RUN chown -R nginx:nginx /usr/share/nginx/html && \
     chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
-    chown -R nginx:nginx /etc/nginx/conf.d
+    chown -R nginx:nginx /etc/nginx/conf.d && \
+    mkdir -p /run && \
+    chown nginx:nginx /run
 
 # Switch to non-root user
 USER nginx
