--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "todolist-monorepo",
   "private": true,
@@ -16,6 +15,10 @@
     "typecheck": "pnpm -r run typecheck",
     "lint": "pnpm -r run lint",
     "lint:fix": "pnpm -r run lint:fix",
+    "test": "pnpm -F @todolist/backend run test",
+    "test:unit": "pnpm -F @todolist/backend run test:unit",
+    "test:integration": "pnpm -F @todolist/backend run test:integration",
+    "test:ci": "pnpm -F @todolist/backend run test:ci",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "start": "pnpm -F @todolist/backend start",
